Fix flex box issues on Safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,7 @@
 }
 body {
   background-image: url("../img/background2.jpg");
+  background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   font-family: "Lato-Regular";
@@ -24,7 +25,9 @@ body {
   width: 100%;
   height: 44px;
   display: flex;
+  display: -webkit-box;
   justify-content: center;
+  -webkit-box-pack: center;
   background-color: #fff;
   padding: 2px 0;
   position: fixed;
@@ -45,7 +48,9 @@ body {
 .mainHeader ul {
   list-style: none;
   display: flex;
+  display: -webkit-box;
   align-items: center;
+  -webkit-box-align: center;
   font-size: 12px;
 }
 .mainHeader ul a {
@@ -77,7 +82,9 @@ body {
   height: inherit;
   margin: 0 auto;
   display: flex;
+  display: -webkit-box;
   align-items: flex-end;
+  -webkit-box-align: end;
 }
 p {
   color: #fff;
@@ -117,6 +124,7 @@ article a {
 }
 .home article .controls {
   display: flex;
+  display: -webkit-box;
 }
 .home .baixo {
   width: 100%;
@@ -149,8 +157,11 @@ article a {
   background-size: cover;
   background-attachment: fixed;
   display: flex;
+  display: -webkit-box;
   align-items: center;
+  -webkit-box-align: center;
   justify-content: center;
+  -webkit-box-pack: center;
   position: relative;
 }
 .facaparte article {
@@ -168,8 +179,11 @@ article a {
   left: 0;
   background-color: rgba(0,0,0,0.5);
   display: flex;
+  display: -webkit-box;
   justify-content: center;
+  -webkit-box-pack: center;
   align-items: center;
+  -webkit-box-align: center;
   display: none;
 }
 .formLightBox {
@@ -289,11 +303,15 @@ textarea {
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   display: flex;
+  display: -webkit-box;
   align-items: center;
+  -webkit-box-align: center;
 }
 .formLightBox footer .wrap {
   display: flex;
+  display: -webkit-box;
   justify-content: space-between;
+  -webkit-box-pack: center;
   width: 90%;
   height: 50px;
   margin: 0 auto;
@@ -314,9 +332,12 @@ textarea {
   width: 100%;
   height: 126px;
   display: flex;
+  display: -webkit-box;
   background-color: #ddd;
   justify-content: center;
+  -webkit-box-pack: center;
   align-items: center;
+  -webkit-box-align: center;
 }
 .mainFooter .wrap {
   margin-left: 12px;
@@ -333,7 +354,9 @@ textarea {
   width: 235px;
   margin-top: 5px;
   display: flex;
+  display: -webkit-box;
   justify-content: space-between;
+  -webkit-box-pack: justify;
 }
 .mainFooter .social {
   width: 35px;
@@ -342,8 +365,15 @@ textarea {
   background-color: #666;
   cursor: pointer;
   display: flex;
+  display: -webkit-box;
   justify-content: center;
+  -webkit-box-pack: center;
   align-items: center;
+  -webkit-box-align: center;
+  -webkit-transition: background-color 1s;
+  -mox-transition: background-color 1s;
+  -ms-transition: background-color 1s;
+  -o-transition: background-color 1s;
   transition: background-color 1s;
 }
 .mainFooter .social:hover {
